[gd_scene load_steps=2 format=3 uid="uid://bkbyxscpjydao"]

[ext_resource type="Script" path="res://2p_hud.gd" id="1_mo087"]

[node name="2p_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mo087")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1536.0
offset_top = 64.0
offset_right = 1792.0
offset_bottom = 91.0
step = 1.0
value = 100.0
rounded = true

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 264.0
offset_right = 316.0
offset_bottom = 26.0
text = "Health"

[node name="StaminaBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1536.0
offset_top = 104.0
offset_right = 1792.0
offset_bottom = 131.0
value = 100.0

[node name="Label" type="Label" parent="StaminaBar"]
layout_mode = 0
offset_left = 264.0
offset_right = 328.0
offset_bottom = 26.0
text = "Stamina"

[node name="PowerBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1752.0
offset_top = 144.0
offset_right = 1792.0
offset_bottom = 171.0

[node name="Label" type="Label" parent="PowerBar"]
layout_mode = 0
offset_left = 48.0
offset_right = 97.0
offset_bottom = 26.0
text = "Power"

[node name="RematchButton" type="Button" parent="."]
visible = false
top_level = true
layout_mode = 0
offset_left = 768.0
offset_top = 320.0
offset_right = 1088.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 50
text = "Rematch"

[node name="ResetButton" type="Button" parent="."]
visible = false
top_level = true
layout_mode = 0
offset_left = 768.0
offset_top = 512.0
offset_right = 1088.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 50
text = "Reset"
